[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/coin_spawner.gd" type="Script" id=1]

[node name="coin_spawner" type="Spatial"]
script = ExtResource( 1 )

[node name="coin_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="self_spawn_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
[connection signal="timeout" from="coin_timer" to="." method="_on_coin_timer_timeout"]
[connection signal="timeout" from="self_spawn_timer" to="." method="_on_self_spawn_timer_timeout"]
